syntax = "proto3";

package proto;

import "message.proto";

// ------------------------------------------------- Word

service PersonalWordService {
  rpc SaveWord(SaveWordRequest) returns (SaveWordResponse);
}

message SaveWordRequest {
  string word = 1;
  string user_id = 2;
  string list_name = 3;
}

message SaveWordResponse {
  Word word = 1;
  List list = 2;
}
